kiwi_java_resources = [
    "//chrome/android/java/res/drawable-hdpi/ic_clear_data.png",
    "//chrome/android/java/res/drawable-mdpi/ic_clear_data.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_clear_data.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_clear_data.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_clear_data.png",
    "//chrome/android/java/res/drawable-hdpi/ic_share.png",
    "//chrome/android/java/res/drawable-mdpi/ic_share.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_share.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_share.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_share.png",
    "//chrome/android/java/res/drawable-hdpi/ic_recent_tabs.png",
    "//chrome/android/java/res/drawable-mdpi/ic_recent_tabs.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_recent_tabs.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_recent_tabs.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_recent_tabs.png",
    "//chrome/android/java/res/drawable-hdpi/ic_bookmarks.png",
    "//chrome/android/java/res/drawable-mdpi/ic_bookmarks.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_bookmarks.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_bookmarks.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_bookmarks.png",
    "//chrome/android/java/res/drawable-hdpi/ic_desktop_mode.png",
    "//chrome/android/java/res/drawable-mdpi/ic_desktop_mode.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_desktop_mode.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_desktop_mode.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_desktop_mode.png",
    "//chrome/android/java/res/drawable-hdpi/ic_extensions.png",
    "//chrome/android/java/res/drawable-mdpi/ic_extensions.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_extensions.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_extensions.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_extensions.png",
    "//chrome/android/java/res/drawable-hdpi/ic_incognito.png",
    "//chrome/android/java/res/drawable-mdpi/ic_incognito.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_incognito.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_incognito.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_incognito.png",
    "//chrome/android/java/res/drawable-hdpi/ic_new_tab.png",
    "//chrome/android/java/res/drawable-mdpi/ic_new_tab.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_new_tab.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_new_tab.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_new_tab.png",
    "//chrome/android/java/res/drawable-hdpi/ic_add_to_home_screen_r.png",
    "//chrome/android/java/res/drawable-mdpi/ic_add_to_home_screen_r.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_add_to_home_screen_r.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_add_to_home_screen_r.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_add_to_home_screen_r.png",
    "//chrome/android/java/res/drawable-hdpi/ic_find_in_page_r.png",
    "//chrome/android/java/res/drawable-mdpi/ic_find_in_page_r.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_find_in_page_r.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_find_in_page_r.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_find_in_page_r.png",
    "//chrome/android/java/res/drawable-hdpi/ic_translate_r.png",
    "//chrome/android/java/res/drawable-mdpi/ic_translate_r.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_translate_r.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_translate_r.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_translate_r.png",
    "//chrome/android/java/res/drawable-hdpi/ic_downloads.png",
    "//chrome/android/java/res/drawable-mdpi/ic_downloads.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_downloads.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_downloads.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_downloads.png",
    "//chrome/android/java/res/drawable-hdpi/ic_night_mode_on.png",
    "//chrome/android/java/res/drawable-mdpi/ic_night_mode_on.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_night_mode_on.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_night_mode_on.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_night_mode_on.png",
    "//chrome/android/java/res/drawable-hdpi/ic_night_mode_off.png",
    "//chrome/android/java/res/drawable-mdpi/ic_night_mode_off.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_night_mode_off.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_night_mode_off.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_night_mode_off.png",
    "//chrome/android/java/res/drawable-hdpi/ic_adblock_on.png",
    "//chrome/android/java/res/drawable-mdpi/ic_adblock_on.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_adblock_on.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_adblock_on.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_adblock_on.png",
    "//chrome/android/java/res/drawable-hdpi/ic_adblock_off.png",
    "//chrome/android/java/res/drawable-mdpi/ic_adblock_off.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_adblock_off.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_adblock_off.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_adblock_off.png",
    "//chrome/android/java/res/drawable-hdpi/ic_devtools.png",
    "//chrome/android/java/res/drawable-mdpi/ic_devtools.png",
    "//chrome/android/java/res/drawable-xhdpi/ic_devtools.png",
    "//chrome/android/java/res/drawable-xxhdpi/ic_devtools.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ic_devtools.png",
    "//chrome/android/java/res/layout/radio_button_group_translate_preference.xml",
    "//chrome/android/java/res/layout/radio_button_group_tabswitcher_preference.xml",
    "//chrome/android/java/res/layout/radio_button_group_nightmode_preference.xml",
    "//chrome/android/java/res/values-xxhdpi/dimens.xml",
    "//chrome/android/java/res/xml/translate_preferences.xml",
    "//chrome/android/java/res/xml/toolbar_preferences.xml",
    "//chrome/android/java/res/xml/tabswitcher_preferences.xml",
    "//chrome/android/java/res/xml/nightmode_preferences.xml",

# Settings icons
    "//chrome/android/java/res/drawable-hdpi/ics_edit_homepage.png",
    "//chrome/android/java/res/drawable-mdpi/ics_edit_homepage.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_edit_homepage.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_edit_homepage.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_edit_homepage.png",
    "//chrome/android/java/res/drawable-hdpi/ics_languages.png",
    "//chrome/android/java/res/drawable-mdpi/ics_languages.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_languages.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_languages.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_languages.png",
    "//chrome/android/java/res/drawable-hdpi/ics_dev_options.png",
    "//chrome/android/java/res/drawable-mdpi/ics_dev_options.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_dev_options.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_dev_options.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_dev_options.png",
    "//chrome/android/java/res/drawable-hdpi/ics_lite_mode.png",
    "//chrome/android/java/res/drawable-mdpi/ics_lite_mode.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_lite_mode.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_lite_mode.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_lite_mode.png",
    "//chrome/android/java/res/drawable-hdpi/ics_notifications.png",
    "//chrome/android/java/res/drawable-mdpi/ics_notifications.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_notifications.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_notifications.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_notifications.png",
    "//chrome/android/java/res/drawable-hdpi/ics_accessibility.png",
    "//chrome/android/java/res/drawable-mdpi/ics_accessibility.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_accessibility.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_accessibility.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_accessibility.png",
    "//chrome/android/java/res/drawable-hdpi/ics_toolbar_shortcut.png",
    "//chrome/android/java/res/drawable-mdpi/ics_toolbar_shortcut.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_toolbar_shortcut.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_toolbar_shortcut.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_toolbar_shortcut.png",
    "//chrome/android/java/res/drawable-hdpi/ics_services.png",
    "//chrome/android/java/res/drawable-mdpi/ics_services.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_services.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_services.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_services.png",
    "//chrome/android/java/res/drawable-hdpi/ics_clear_data.png",
    "//chrome/android/java/res/drawable-mdpi/ics_clear_data.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_clear_data.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_clear_data.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_clear_data.png",
    "//chrome/android/java/res/drawable-hdpi/ics_website_settings.png",
    "//chrome/android/java/res/drawable-mdpi/ics_website_settings.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_website_settings.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_website_settings.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_website_settings.png",
    "//chrome/android/java/res/drawable-hdpi/ics_privacy_security.png",
    "//chrome/android/java/res/drawable-mdpi/ics_privacy_security.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_privacy_security.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_privacy_security.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_privacy_security.png",
    "//chrome/android/java/res/drawable-hdpi/ics_tab_switcher.png",
    "//chrome/android/java/res/drawable-mdpi/ics_tab_switcher.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_tab_switcher.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_tab_switcher.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_tab_switcher.png",
    "//chrome/android/java/res/drawable-hdpi/ics_night_mode.png",
    "//chrome/android/java/res/drawable-mdpi/ics_night_mode.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_night_mode.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_night_mode.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_night_mode.png",
    "//chrome/android/java/res/drawable-hdpi/ics_theme.png",
    "//chrome/android/java/res/drawable-mdpi/ics_theme.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_theme.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_theme.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_theme.png",
    "//chrome/android/java/res/drawable-hdpi/ics_addresses.png",
    "//chrome/android/java/res/drawable-mdpi/ics_addresses.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_addresses.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_addresses.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_addresses.png",
    "//chrome/android/java/res/drawable-hdpi/ics_payments.png",
    "//chrome/android/java/res/drawable-mdpi/ics_payments.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_payments.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_payments.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_payments.png",
    "//chrome/android/java/res/drawable-hdpi/ics_passwords.png",
    "//chrome/android/java/res/drawable-mdpi/ics_passwords.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_passwords.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_passwords.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_passwords.png",
    "//chrome/android/java/res/drawable-hdpi/ics_search_engine.png",
    "//chrome/android/java/res/drawable-mdpi/ics_search_engine.png",
    "//chrome/android/java/res/drawable-xhdpi/ics_search_engine.png",
    "//chrome/android/java/res/drawable-xxhdpi/ics_search_engine.png",
    "//chrome/android/java/res/drawable-xxxhdpi/ics_search_engine.png",
    "//chrome/android/java/res/values-bn/strings.xml",
    "//chrome/android/java/res/values-sk/strings.xml",
    "//chrome/android/java/res/values-kmr/strings.xml",
    "//chrome/android/java/res/values-ku/strings.xml",
    "//chrome/android/java/res/values-zh-rCN/strings.xml",
    "//chrome/android/java/res/values-sv-rSE/strings.xml",
    "//chrome/android/java/res/values-ru/strings.xml",
    "//chrome/android/java/res/values-tr/strings.xml",
    "//chrome/android/java/res/values-hi/strings.xml",
    "//chrome/android/java/res/values-pt-rBR/strings.xml",
    "//chrome/android/java/res/values-zh-rTW/strings.xml",
    "//chrome/android/java/res/values-es-rUS/strings.xml",
    "//chrome/android/java/res/values-fi/strings.xml",
    "//chrome/android/java/res/values-ca/strings.xml",
    "//chrome/android/java/res/values-ko/strings.xml",
    "//chrome/android/java/res/values-vi/strings.xml",
    "//chrome/android/java/res/values-sr/strings.xml",
    "//chrome/android/java/res/values-hr/strings.xml",
    "//chrome/android/java/res/values-uk/strings.xml",
    "//chrome/android/java/res/values-pl/strings.xml",
    "//chrome/android/java/res/values-cs/strings.xml",
    "//chrome/android/java/res/values-nl/strings.xml",
    "//chrome/android/java/res/values-fr/strings.xml",
    "//chrome/android/java/res/values-da/strings.xml",
    "//chrome/android/java/res/values-ja/strings.xml",
    "//chrome/android/java/res/values-de/strings.xml",
    "//chrome/android/java/res/values-ro/strings.xml",
    "//chrome/android/java/res/values-ar/strings.xml",
    "//chrome/android/java/res/values-pt-rPT/strings.xml",
    "//chrome/android/java/res/values-el/strings.xml",
    "//chrome/android/java/res/values-es-rES/strings.xml",
    "//chrome/android/java/res/values-it/strings.xml",
    "//chrome/android/java/res/values-hu/strings.xml",
]


mises_extra_java_resources = [
  "//chrome/android/java/res/mipmap-mdpi/ic_mises_forward.png",
  "//chrome/android/java/res/mipmap-mdpi/ic_wallet.png",
  "//chrome/android/java/res/mipmap-mdpi/refresh.png",
  "//chrome/android/java/res/mipmap-mdpi/refresh_close.png",
  "//chrome/android/java/res/mipmap-mdpi/ic_mises_create.png",
  "//chrome/android/java/res/mipmap-mdpi/ic_copy.png",
  "//chrome/android/java/res/mipmap-mdpi/ic_portal.png",
  "//chrome/android/java/res/mipmap-mdpi/ic_reward.png",
  "//chrome/android/java/res/mipmap-mdpi/ic_invite.png",
  "//chrome/android/java/res/mipmap-mdpi/ic_nft.png",
  "//chrome/android/java/res/mipmap-mdpi/ic_view_website.png",
  "//chrome/android/java/res/mipmap-mdpi/ic_mydata.png",
  "//chrome/android/java/res/mipmap-mdpi/ic_discover.png",
  "//chrome/android/java/res/mipmap-mdpi/head_small.png",
  "//chrome/android/java/res/mipmap-mdpi/head.png",
  "//chrome/android/java/res/mipmap-mdpi/link.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/ic_mises_forward.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/ic_wallet.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/refresh.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/refresh_close.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/ic_mises_create.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/ic_copy.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/ic_portal.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/ic_reward.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/ic_invite.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/ic_nft.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/ic_view_website.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/ic_mydata.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/ic_discover.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/head_small.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/head.png",
  "//chrome/android/java/res/mipmap-xxxhdpi/link.png",
  "//chrome/android/java/res/mipmap-xhdpi/ic_mises_forward.png",
  "//chrome/android/java/res/mipmap-xhdpi/ic_wallet.png",
  "//chrome/android/java/res/mipmap-xhdpi/refresh.png",
  "//chrome/android/java/res/mipmap-xhdpi/refresh_close.png",
  "//chrome/android/java/res/mipmap-xhdpi/ic_mises_create.png",
  "//chrome/android/java/res/mipmap-xhdpi/ic_copy.png",
  "//chrome/android/java/res/mipmap-xhdpi/ic_portal.png",
  "//chrome/android/java/res/mipmap-xhdpi/ic_reward.png",
  "//chrome/android/java/res/mipmap-xhdpi/ic_invite.png",
  "//chrome/android/java/res/mipmap-xhdpi/ic_nft.png",
  "//chrome/android/java/res/mipmap-xhdpi/ic_view_website.png",
  "//chrome/android/java/res/mipmap-xhdpi/ic_mydata.png",
  "//chrome/android/java/res/mipmap-xhdpi/ic_discover.png",
  "//chrome/android/java/res/mipmap-xhdpi/head_small.png",
  "//chrome/android/java/res/mipmap-xhdpi/head.png",
  "//chrome/android/java/res/mipmap-xhdpi/link.png",
  "//chrome/android/java/res/mipmap-xxhdpi/ic_mises_forward.png",
  "//chrome/android/java/res/mipmap-xxhdpi/ic_wallet.png",
  "//chrome/android/java/res/mipmap-xxhdpi/refresh.png",
  "//chrome/android/java/res/mipmap-xxhdpi/refresh_close.png",
  "//chrome/android/java/res/mipmap-xxhdpi/ic_mises_create.png",
  "//chrome/android/java/res/mipmap-xxhdpi/ic_copy.png",
  "//chrome/android/java/res/mipmap-xxhdpi/ic_portal.png",
  "//chrome/android/java/res/mipmap-xxhdpi/ic_reward.png",
  "//chrome/android/java/res/mipmap-xxhdpi/ic_invite.png",
  "//chrome/android/java/res/mipmap-xxhdpi/ic_nft.png",
  "//chrome/android/java/res/mipmap-xxhdpi/ic_view_website.png",
  "//chrome/android/java/res/mipmap-xxhdpi/ic_mydata.png",
  "//chrome/android/java/res/mipmap-xxhdpi/ic_discover.png",
  "//chrome/android/java/res/mipmap-xxhdpi/head_small.png",
  "//chrome/android/java/res/mipmap-xxhdpi/head.png",
  "//chrome/android/java/res/mipmap-xxhdpi/link.png",
  "//chrome/android/java/res/mipmap-hdpi/ic_mises_forward.png",
  "//chrome/android/java/res/mipmap-hdpi/ic_wallet.png",
  "//chrome/android/java/res/mipmap-hdpi/refresh.png",
  "//chrome/android/java/res/mipmap-hdpi/refresh_close.png",
  "//chrome/android/java/res/mipmap-hdpi/ic_mises_create.png",
  "//chrome/android/java/res/mipmap-hdpi/ic_copy.png",
  "//chrome/android/java/res/mipmap-hdpi/ic_portal.png",
  "//chrome/android/java/res/mipmap-hdpi/ic_reward.png",
  "//chrome/android/java/res/mipmap-hdpi/ic_invite.png",
  "//chrome/android/java/res/mipmap-hdpi/ic_nft.png",
  "//chrome/android/java/res/mipmap-hdpi/ic_view_website.png",
  "//chrome/android/java/res/mipmap-hdpi/ic_mydata.png",
  "//chrome/android/java/res/mipmap-hdpi/ic_discover.png",
  "//chrome/android/java/res/mipmap-hdpi/head_small.png",
  "//chrome/android/java/res/mipmap-hdpi/head.png",
  "//chrome/android/java/res/mipmap-hdpi/link.png",
  "//chrome/android/java/res/mipmap-anydpi-v26/ic_launcher.xml",
  "//chrome/android/java/res/layout/mises_alert_dialog.xml",
  "//chrome/android/java/res/layout/mises_share_dialog.xml",
  "//chrome/android/java/res/layout/mises_user_info_menu.xml",

  "//chrome/android/java/res/drawable/mises_share_cancel_bg.xml",
  "//chrome/android/java/res/drawable/mises_share_confirm_bg.xml",
  "//chrome/android/java/res/drawable/mises_share_bg.xml",
  "//chrome/android/java/res/drawable/mises_share_title_bg.xml",
  "//chrome/android/java/res/drawable/mises_share_content_bg.xml",
  "//chrome/android/java/res/anim/left_enter.xml",
  "//chrome/android/java/res/anim/left_exit.xml",
  "//chrome/android/java/res/drawable-hdpi/ic_menu_mises_forward.png",
  "//chrome/android/java/res/drawable-mdpi/ic_menu_mises_forward.png",
  "//chrome/android/java/res/drawable-xhdpi/ic_menu_mises_forward.png",
  "//chrome/android/java/res/drawable-xxhdpi/ic_menu_mises_forward.png",
  "//chrome/android/java/res/drawable-xxxhdpi/ic_menu_mises_forward.png",

]

mises_java_resources = mises_extra_java_resources + kiwi_java_resources + [
    "java/res/drawable/ic_vpn.xml",
    "java/res/drawable/mises_new_group_tab.xml",
    "java/res/values/mises_colors.xml",
    "java/res/values-v21/mises_styles.xml",
    "java/res/layout/web_notification_icon_frame_brave.xml",
    
    "java/res/layout/radio_button_group_translate_preference.xml",
    "java/res/layout/radio_button_group_tabswitcher_preference.xml",
    "java/res/values-xxhdpi/dimens.xml",
    "java/res/xml/simple_accessibility_preferences.xml",
    "java/res/xml/data_reduction_preferences_off_lite_mode.xml",
    "java/res/xml/translate_preferences.xml",
    "java/res/xml/tabswitcher_preferences.xml",




]
mises_base_module_resources = [ 
    "java/res_chromium_base/drawable-night/themed_app_icon.xml",
    "java/res_chromium_base/mipmap-hdpi/ic_foreground.png",
    "java/res_chromium_base/mipmap-hdpi/ic_background.png",
    "java/res_chromium_base/mipmap-mdpi/ic_foreground.png",
    "java/res_chromium_base/mipmap-mdpi/ic_background.png",
    "java/res_chromium_base/mipmap-xhdpi/ic_foreground.png",
    "java/res_chromium_base/mipmap-xhdpi/ic_background.png",
    "java/res_chromium_base/mipmap-xxhdpi/ic_foreground.png",
    "java/res_chromium_base/mipmap-xxhdpi/ic_background.png",
    "java/res_chromium_base/mipmap-xxxhdpi/ic_foreground.png",
    "java/res_chromium_base/mipmap-xxxhdpi/ic_background.png",
    "java/res_chromium_base/values/google-services.xml",
]

# XML preprocessing
mises_java_preprocess_xml_sources =
    [ "//chrome/android/java/res/menu/main_menu.xml" ]
mises_java_preprocess_module_sources =
    [ "//mises/android/preprocess/xml/menu_main_menu_xml.py" ]
