kiwi_java_resources = [
    "java/res/drawable-hdpi/ic_clear_data.png",
    "java/res/drawable-mdpi/ic_clear_data.png",
    "java/res/drawable-xhdpi/ic_clear_data.png",
    "java/res/drawable-xxhdpi/ic_clear_data.png",
    "java/res/drawable-xxxhdpi/ic_clear_data.png",
    "java/res/drawable-hdpi/ic_share.png",
    "java/res/drawable-mdpi/ic_share.png",
    "java/res/drawable-xhdpi/ic_share.png",
    "java/res/drawable-xxhdpi/ic_share.png",
    "java/res/drawable-xxxhdpi/ic_share.png",
    "java/res/drawable-hdpi/ic_recent_tabs.png",
    "java/res/drawable-mdpi/ic_recent_tabs.png",
    "java/res/drawable-xhdpi/ic_recent_tabs.png",
    "java/res/drawable-xxhdpi/ic_recent_tabs.png",
    "java/res/drawable-xxxhdpi/ic_recent_tabs.png",
    "java/res/drawable-hdpi/ic_bookmarks.png",
    "java/res/drawable-mdpi/ic_bookmarks.png",
    "java/res/drawable-xhdpi/ic_bookmarks.png",
    "java/res/drawable-xxhdpi/ic_bookmarks.png",
    "java/res/drawable-xxxhdpi/ic_bookmarks.png",
    "java/res/drawable-hdpi/ic_desktop_mode.png",
    "java/res/drawable-mdpi/ic_desktop_mode.png",
    "java/res/drawable-xhdpi/ic_desktop_mode.png",
    "java/res/drawable-xxhdpi/ic_desktop_mode.png",
    "java/res/drawable-xxxhdpi/ic_desktop_mode.png",
    "java/res/drawable-hdpi/ic_extensions.png",
    "java/res/drawable-mdpi/ic_extensions.png",
    "java/res/drawable-xhdpi/ic_extensions.png",
    "java/res/drawable-xxhdpi/ic_extensions.png",
    "java/res/drawable-xxxhdpi/ic_extensions.png",
    "java/res/drawable-hdpi/ic_incognito.png",
    "java/res/drawable-mdpi/ic_incognito.png",
    "java/res/drawable-xhdpi/ic_incognito.png",
    "java/res/drawable-xxhdpi/ic_incognito.png",
    "java/res/drawable-xxxhdpi/ic_incognito.png",
    "java/res/drawable-hdpi/ic_new_tab.png",
    "java/res/drawable-mdpi/ic_new_tab.png",
    "java/res/drawable-xhdpi/ic_new_tab.png",
    "java/res/drawable-xxhdpi/ic_new_tab.png",
    "java/res/drawable-xxxhdpi/ic_new_tab.png",
    "java/res/drawable-hdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-mdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-xhdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-xxhdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-xxxhdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-hdpi/ic_find_in_page_r.png",
    "java/res/drawable-mdpi/ic_find_in_page_r.png",
    "java/res/drawable-xhdpi/ic_find_in_page_r.png",
    "java/res/drawable-xxhdpi/ic_find_in_page_r.png",
    "java/res/drawable-xxxhdpi/ic_find_in_page_r.png",
    "java/res/drawable-hdpi/ic_translate_r.png",
    "java/res/drawable-mdpi/ic_translate_r.png",
    "java/res/drawable-xhdpi/ic_translate_r.png",
    "java/res/drawable-xxhdpi/ic_translate_r.png",
    "java/res/drawable-xxxhdpi/ic_translate_r.png",
    "java/res/drawable-hdpi/ic_downloads.png",
    "java/res/drawable-mdpi/ic_downloads.png",
    "java/res/drawable-xhdpi/ic_downloads.png",
    "java/res/drawable-xxhdpi/ic_downloads.png",
    "java/res/drawable-xxxhdpi/ic_downloads.png",
    "java/res/drawable-hdpi/ic_night_mode_on.png",
    "java/res/drawable-mdpi/ic_night_mode_on.png",
    "java/res/drawable-xhdpi/ic_night_mode_on.png",
    "java/res/drawable-xxhdpi/ic_night_mode_on.png",
    "java/res/drawable-xxxhdpi/ic_night_mode_on.png",
    "java/res/drawable-hdpi/ic_night_mode_off.png",
    "java/res/drawable-mdpi/ic_night_mode_off.png",
    "java/res/drawable-xhdpi/ic_night_mode_off.png",
    "java/res/drawable-xxhdpi/ic_night_mode_off.png",
    "java/res/drawable-xxxhdpi/ic_night_mode_off.png",
    "java/res/drawable-hdpi/ic_adblock_on.png",
    "java/res/drawable-mdpi/ic_adblock_on.png",
    "java/res/drawable-xhdpi/ic_adblock_on.png",
    "java/res/drawable-xxhdpi/ic_adblock_on.png",
    "java/res/drawable-xxxhdpi/ic_adblock_on.png",
    "java/res/drawable-hdpi/ic_adblock_off.png",
    "java/res/drawable-mdpi/ic_adblock_off.png",
    "java/res/drawable-xhdpi/ic_adblock_off.png",
    "java/res/drawable-xxhdpi/ic_adblock_off.png",
    "java/res/drawable-xxxhdpi/ic_adblock_off.png",
    "java/res/drawable-hdpi/ic_devtools.png",
    "java/res/drawable-mdpi/ic_devtools.png",
    "java/res/drawable-xhdpi/ic_devtools.png",
    "java/res/drawable-xxhdpi/ic_devtools.png",
    "java/res/drawable-xxxhdpi/ic_devtools.png",
    "java/res/layout/radio_button_group_translate_preference.xml",
    "java/res/layout/radio_button_group_tabswitcher_preference.xml",
    "java/res/layout/radio_button_group_nightmode_preference.xml",
    "java/res/values-xxhdpi/dimens.xml",
    "java/res/xml/translate_preferences.xml",
    "java/res/xml/toolbar_preferences.xml",
    "java/res/xml/tabswitcher_preferences.xml",
    "java/res/xml/nightmode_preferences.xml",

# Settings icons
    "java/res/drawable-hdpi/ics_edit_homepage.png",
    "java/res/drawable-mdpi/ics_edit_homepage.png",
    "java/res/drawable-xhdpi/ics_edit_homepage.png",
    "java/res/drawable-xxhdpi/ics_edit_homepage.png",
    "java/res/drawable-xxxhdpi/ics_edit_homepage.png",
    "java/res/drawable-hdpi/ics_languages.png",
    "java/res/drawable-mdpi/ics_languages.png",
    "java/res/drawable-xhdpi/ics_languages.png",
    "java/res/drawable-xxhdpi/ics_languages.png",
    "java/res/drawable-xxxhdpi/ics_languages.png",
    "java/res/drawable-hdpi/ics_dev_options.png",
    "java/res/drawable-mdpi/ics_dev_options.png",
    "java/res/drawable-xhdpi/ics_dev_options.png",
    "java/res/drawable-xxhdpi/ics_dev_options.png",
    "java/res/drawable-xxxhdpi/ics_dev_options.png",
    "java/res/drawable-hdpi/ics_lite_mode.png",
    "java/res/drawable-mdpi/ics_lite_mode.png",
    "java/res/drawable-xhdpi/ics_lite_mode.png",
    "java/res/drawable-xxhdpi/ics_lite_mode.png",
    "java/res/drawable-xxxhdpi/ics_lite_mode.png",
    "java/res/drawable-hdpi/ics_notifications.png",
    "java/res/drawable-mdpi/ics_notifications.png",
    "java/res/drawable-xhdpi/ics_notifications.png",
    "java/res/drawable-xxhdpi/ics_notifications.png",
    "java/res/drawable-xxxhdpi/ics_notifications.png",
    "java/res/drawable-hdpi/ics_accessibility.png",
    "java/res/drawable-mdpi/ics_accessibility.png",
    "java/res/drawable-xhdpi/ics_accessibility.png",
    "java/res/drawable-xxhdpi/ics_accessibility.png",
    "java/res/drawable-xxxhdpi/ics_accessibility.png",
    "java/res/drawable-hdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-mdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-xhdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-xxhdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-xxxhdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-hdpi/ics_services.png",
    "java/res/drawable-mdpi/ics_services.png",
    "java/res/drawable-xhdpi/ics_services.png",
    "java/res/drawable-xxhdpi/ics_services.png",
    "java/res/drawable-xxxhdpi/ics_services.png",
    "java/res/drawable-hdpi/ics_clear_data.png",
    "java/res/drawable-mdpi/ics_clear_data.png",
    "java/res/drawable-xhdpi/ics_clear_data.png",
    "java/res/drawable-xxhdpi/ics_clear_data.png",
    "java/res/drawable-xxxhdpi/ics_clear_data.png",
    "java/res/drawable-hdpi/ics_website_settings.png",
    "java/res/drawable-mdpi/ics_website_settings.png",
    "java/res/drawable-xhdpi/ics_website_settings.png",
    "java/res/drawable-xxhdpi/ics_website_settings.png",
    "java/res/drawable-xxxhdpi/ics_website_settings.png",
    "java/res/drawable-hdpi/ics_privacy_security.png",
    "java/res/drawable-mdpi/ics_privacy_security.png",
    "java/res/drawable-xhdpi/ics_privacy_security.png",
    "java/res/drawable-xxhdpi/ics_privacy_security.png",
    "java/res/drawable-xxxhdpi/ics_privacy_security.png",
    "java/res/drawable-hdpi/ics_tab_switcher.png",
    "java/res/drawable-mdpi/ics_tab_switcher.png",
    "java/res/drawable-xhdpi/ics_tab_switcher.png",
    "java/res/drawable-xxhdpi/ics_tab_switcher.png",
    "java/res/drawable-xxxhdpi/ics_tab_switcher.png",
    "java/res/drawable-hdpi/ics_night_mode.png",
    "java/res/drawable-mdpi/ics_night_mode.png",
    "java/res/drawable-xhdpi/ics_night_mode.png",
    "java/res/drawable-xxhdpi/ics_night_mode.png",
    "java/res/drawable-xxxhdpi/ics_night_mode.png",
    "java/res/drawable-hdpi/ics_theme.png",
    "java/res/drawable-mdpi/ics_theme.png",
    "java/res/drawable-xhdpi/ics_theme.png",
    "java/res/drawable-xxhdpi/ics_theme.png",
    "java/res/drawable-xxxhdpi/ics_theme.png",
    "java/res/drawable-hdpi/ics_addresses.png",
    "java/res/drawable-mdpi/ics_addresses.png",
    "java/res/drawable-xhdpi/ics_addresses.png",
    "java/res/drawable-xxhdpi/ics_addresses.png",
    "java/res/drawable-xxxhdpi/ics_addresses.png",
    "java/res/drawable-hdpi/ics_payments.png",
    "java/res/drawable-mdpi/ics_payments.png",
    "java/res/drawable-xhdpi/ics_payments.png",
    "java/res/drawable-xxhdpi/ics_payments.png",
    "java/res/drawable-xxxhdpi/ics_payments.png",
    "java/res/drawable-hdpi/ics_passwords.png",
    "java/res/drawable-mdpi/ics_passwords.png",
    "java/res/drawable-xhdpi/ics_passwords.png",
    "java/res/drawable-xxhdpi/ics_passwords.png",
    "java/res/drawable-xxxhdpi/ics_passwords.png",
    "java/res/drawable-hdpi/ics_search_engine.png",
    "java/res/drawable-mdpi/ics_search_engine.png",
    "java/res/drawable-xhdpi/ics_search_engine.png",
    "java/res/drawable-xxhdpi/ics_search_engine.png",
    "java/res/drawable-xxxhdpi/ics_search_engine.png",
    "java/res/values-bn/strings.xml",
    "java/res/values-sk/strings.xml",
    "java/res/values-kmr/strings.xml",
    "java/res/values-ku/strings.xml",
    "java/res/values-zh-rCN/strings.xml",
    "java/res/values-sv-rSE/strings.xml",
    "java/res/values-ru/strings.xml",
    "java/res/values-tr/strings.xml",
    "java/res/values-hi/strings.xml",
    "java/res/values-pt-rBR/strings.xml",
    "java/res/values-zh-rTW/strings.xml",
    "java/res/values-es-rUS/strings.xml",
    "java/res/values-fi/strings.xml",
    "java/res/values-ca/strings.xml",
    "java/res/values-ko/strings.xml",
    "java/res/values-vi/strings.xml",
    "java/res/values-sr/strings.xml",
    "java/res/values-hr/strings.xml",
    "java/res/values-uk/strings.xml",
    "java/res/values-pl/strings.xml",
    "java/res/values-cs/strings.xml",
    "java/res/values-nl/strings.xml",
    "java/res/values-fr/strings.xml",
    "java/res/values-da/strings.xml",
    "java/res/values-ja/strings.xml",
    "java/res/values-de/strings.xml",
    "java/res/values-ro/strings.xml",
    "java/res/values-ar/strings.xml",
    "java/res/values-pt-rPT/strings.xml",
    "java/res/values-el/strings.xml",
    "java/res/values-es-rES/strings.xml",
    "java/res/values-it/strings.xml",
    "java/res/values-hu/strings.xml",
]


mises_extra_java_resources = [
  "java/res/mipmap-mdpi/ic_mises_forward.png",
  "java/res/mipmap-mdpi/ic_wallet.png",
  "java/res/mipmap-mdpi/refresh.png",
  "java/res/mipmap-mdpi/refresh_close.png",
  "java/res/mipmap-mdpi/ic_mises_create.png",
  "java/res/mipmap-mdpi/ic_copy.png",
  "java/res/mipmap-mdpi/ic_portal.png",
  "java/res/mipmap-mdpi/ic_reward.png",
  "java/res/mipmap-mdpi/ic_invite.png",
  "java/res/mipmap-mdpi/ic_nft.png",
  "java/res/mipmap-mdpi/ic_view_website.png",
  "java/res/mipmap-mdpi/ic_mydata.png",
  "java/res/mipmap-mdpi/ic_discover.png",
  "java/res/mipmap-mdpi/head_small.png",
  "java/res/mipmap-mdpi/head.png",
  "java/res/mipmap-mdpi/link.png",
  "java/res/mipmap-xxxhdpi/ic_mises_forward.png",
  "java/res/mipmap-xxxhdpi/ic_wallet.png",
  "java/res/mipmap-xxxhdpi/refresh.png",
  "java/res/mipmap-xxxhdpi/refresh_close.png",
  "java/res/mipmap-xxxhdpi/ic_mises_create.png",
  "java/res/mipmap-xxxhdpi/ic_copy.png",
  "java/res/mipmap-xxxhdpi/ic_portal.png",
  "java/res/mipmap-xxxhdpi/ic_reward.png",
  "java/res/mipmap-xxxhdpi/ic_invite.png",
  "java/res/mipmap-xxxhdpi/ic_nft.png",
  "java/res/mipmap-xxxhdpi/ic_view_website.png",
  "java/res/mipmap-xxxhdpi/ic_mydata.png",
  "java/res/mipmap-xxxhdpi/ic_discover.png",
  "java/res/mipmap-xxxhdpi/head_small.png",
  "java/res/mipmap-xxxhdpi/head.png",
  "java/res/mipmap-xxxhdpi/link.png",
  "java/res/mipmap-xhdpi/ic_mises_forward.png",
  "java/res/mipmap-xhdpi/ic_wallet.png",
  "java/res/mipmap-xhdpi/refresh.png",
  "java/res/mipmap-xhdpi/refresh_close.png",
  "java/res/mipmap-xhdpi/ic_mises_create.png",
  "java/res/mipmap-xhdpi/ic_copy.png",
  "java/res/mipmap-xhdpi/ic_portal.png",
  "java/res/mipmap-xhdpi/ic_reward.png",
  "java/res/mipmap-xhdpi/ic_invite.png",
  "java/res/mipmap-xhdpi/ic_nft.png",
  "java/res/mipmap-xhdpi/ic_view_website.png",
  "java/res/mipmap-xhdpi/ic_mydata.png",
  "java/res/mipmap-xhdpi/ic_discover.png",
  "java/res/mipmap-xhdpi/head_small.png",
  "java/res/mipmap-xhdpi/head.png",
  "java/res/mipmap-xhdpi/link.png",
  "java/res/mipmap-xxhdpi/ic_mises_forward.png",
  "java/res/mipmap-xxhdpi/ic_wallet.png",
  "java/res/mipmap-xxhdpi/refresh.png",
  "java/res/mipmap-xxhdpi/refresh_close.png",
  "java/res/mipmap-xxhdpi/ic_mises_create.png",
  "java/res/mipmap-xxhdpi/ic_copy.png",
  "java/res/mipmap-xxhdpi/ic_portal.png",
  "java/res/mipmap-xxhdpi/ic_reward.png",
  "java/res/mipmap-xxhdpi/ic_invite.png",
  "java/res/mipmap-xxhdpi/ic_nft.png",
  "java/res/mipmap-xxhdpi/ic_view_website.png",
  "java/res/mipmap-xxhdpi/ic_mydata.png",
  "java/res/mipmap-xxhdpi/ic_discover.png",
  "java/res/mipmap-xxhdpi/head_small.png",
  "java/res/mipmap-xxhdpi/head.png",
  "java/res/mipmap-xxhdpi/link.png",
  "java/res/mipmap-hdpi/ic_mises_forward.png",
  "java/res/mipmap-hdpi/ic_wallet.png",
  "java/res/mipmap-hdpi/refresh.png",
  "java/res/mipmap-hdpi/refresh_close.png",
  "java/res/mipmap-hdpi/ic_mises_create.png",
  "java/res/mipmap-hdpi/ic_copy.png",
  "java/res/mipmap-hdpi/ic_portal.png",
  "java/res/mipmap-hdpi/ic_reward.png",
  "java/res/mipmap-hdpi/ic_invite.png",
  "java/res/mipmap-hdpi/ic_nft.png",
  "java/res/mipmap-hdpi/ic_view_website.png",
  "java/res/mipmap-hdpi/ic_mydata.png",
  "java/res/mipmap-hdpi/ic_discover.png",
  "java/res/mipmap-hdpi/head_small.png",
  "java/res/mipmap-hdpi/head.png",
  "java/res/mipmap-hdpi/link.png",
  "java/res/layout/mises_alert_dialog.xml",
  "java/res/layout/mises_share_dialog.xml",
  "java/res/layout/mises_user_info_menu.xml",

  "java/res/drawable/mises_share_cancel_bg.xml",
  "java/res/drawable/mises_share_confirm_bg.xml",
  "java/res/drawable/mises_share_bg.xml",
  "java/res/drawable/mises_share_title_bg.xml",
  "java/res/drawable/mises_share_content_bg.xml",
  "java/res/anim/left_enter.xml",
  "java/res/anim/left_exit.xml",
  "java/res/mipmap-hdpi/ic_menu_mises_forward.png",
  "java/res/mipmap-mdpi/ic_menu_mises_forward.png",
  "java/res/mipmap-xhdpi/ic_menu_mises_forward.png",
  "java/res/mipmap-xxhdpi/ic_menu_mises_forward.png",
  "java/res/mipmap-xxxhdpi/ic_menu_mises_forward.png",

]

mises_java_resources = mises_extra_java_resources + kiwi_java_resources + [
    "java/res/drawable/ic_vpn.xml",
    "java/res/drawable/mises_new_group_tab.xml",
    "java/res/values/mises_colors.xml",
    "java/res/values-v21/mises_styles.xml",
    "java/res/layout/web_notification_icon_frame_brave.xml",
    
    "java/res/layout/radio_button_group_translate_preference.xml",
    "java/res/layout/radio_button_group_tabswitcher_preference.xml",
    "java/res/values-xxhdpi/dimens.xml",
    "java/res/xml/simple_accessibility_preferences.xml",
    "java/res/xml/data_reduction_preferences_off_lite_mode.xml",
    "java/res/xml/translate_preferences.xml",
    "java/res/xml/tabswitcher_preferences.xml",
    "java/res/values/google-services.xml",
    "java/res/drawable-hdpi/ic_menu_mises_forward.png",
    "java/res/drawable-xhdpi/ic_menu_mises_forward.png",
    "java/res/drawable-xxxhdpi/ic_menu_mises_forward.png",
    "java/res/values/channel_constants.xml",
    "java/res/drawable-mdpi/ic_menu_mises_forward.png",
    "java/res/drawable-xxhdpi/ic_menu_mises_forward.png",
    "java/res/xml/web3_preferences.xml",
    "java/res/xml/unstoppable_domains_preferences.xml",
    "java/res/xml/ens_preferences.xml",
    "java/res/xml/ipfs_preferences.xml",
    "java/res/layout/radio_button_group_ens_resolve_method_preference.xml",
    "java/res/layout/radio_button_group_unstoppable_domains_resolve_method_preference.xml",
    "java/res/layout/radio_button_group_ipfs_gateway_preference.xml",


]
mises_base_module_resources = [ 
    "java/res_chromium_base/drawable-night/themed_app_icon.xml",
]

# XML preprocessing
mises_java_preprocess_xml_sources =
    [ "//mises/android/java/res/menu/main_menu.xml" ]
mises_java_preprocess_module_sources =
    [ "//mises/android/preprocess/xml/menu_main_menu_xml.py" ]
