import("//mises/components/permissions/android/java_sources.gni")

kiwi_java_sources = [
  "//mises/android/java/org/chromium/chrome/browser/AppMenuBridge.java",
  "//mises/android/java/org/chromium/chrome/browser/PersonalizeResults.java",
  "//mises/android/java/org/chromium/chrome/browser/FixDevToolsWindow.java",
  "//mises/android/java/org/chromium/chrome/browser/accessibility/settings/NightScalePreference.java",
  "//mises/android/java/org/chromium/chrome/browser/translate/settings/TranslateSettings.java",
  "//mises/android/java/org/chromium/chrome/browser/translate/settings/RadioButtonGroupTranslatePreference.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/TabSwitcherSettings.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/Web3Settings.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/RadioButtonGroupTabSwitcherPreference.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/ToolbarSettings.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/NightModeSettings.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/RadioButtonGroupNightModePreference.java",
  "//mises/android/java/org/chromium/chrome/browser/init/ChromeBrowserReferrer.java",
  
  "//mises/android/java/org/chromium/chrome/browser/compositor/layouts/ChromeAnimation.java",
  "//mises/android/java/org/chromium/chrome/browser/init/InAppUpdater.java",
 
]

mises_java_sources = kiwi_java_sources + [
  "//mises/android/java/org/chromium/chrome/browser/appmenu/MisesTabbedAppMenuPropertiesDelegate.java",
  "//mises/android/java/org/chromium/chrome/browser/app/appmenu/AppMenuIconRowFooter.java",
  "//mises/android/java/org/chromium/chrome/browser/app/appmenu/MisesAppMenuPropertiesDelegateImpl.java",
  "//mises/android/java/org/chromium/chrome/browser/notifications/MisesNotificationPlatformBridge.java",
  "//mises/android/java/org/chromium/chrome/browser/preferences/MisesPrefServiceBridge.java",
  "//mises/android/java/org/chromium/chrome/browser/externalnav/MisesExternalNavigationHandler.java",
  "//mises/android/java/org/chromium/chrome/browser/decentralized_dns/settings/ENSSettingsFragment.java",
  "//mises/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupENSResolveMethodPreference.java",
  "//mises/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupUnstoppableDomainsResolveMethodPreference.java",
  "//mises/android/java/org/chromium/chrome/browser/decentralized_dns/settings/UnstoppableDomainsSettingsFragment.java",
  "//mises/android/java/org/chromium/chrome/browser/ipfs/settings/IPFSSettingsFragment.java",
  "//mises/android/java/org/chromium/chrome/browser/ipfs/settings/RadioButtonGroupIPFSGatewayPreference.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/MisesNewTabPage.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/MisesNewTabPageLayout.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/MisesNtpAdapter.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/TileGroupDelegateWrapper.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/OnMisesNtpListener.java",
  "//mises/android/java/org/chromium/chrome/browser/suggestions/tile/MisesTileView.java",
  "//mises/android/java/org/chromium/chrome/browser/suggestions/tile/MisesTileRenderer.java",
  "//mises/android/java/org/chromium/chrome/browser/suggestions/MisesSiteSuggestion.java",
  "//mises/android/java/org/chromium/base/MisesSysUtils.java",
  "//mises/android/java/org/chromium/chrome/browser/crypto_wallet/BraveWalletProviderDelegateImplHelper.java",
  #"//mises/android/java/org/chromium/chrome/browser/crypto_wallet/permission/BraveDappPermissionPromptDialog.java",
  #"//mises/android/java/org/chromium/chrome/browser/crypto_wallet/permission/BravePermissionAccountsListAdapter.java",
  #"//misesandroid/java/org/chromium/chrome/browser/crypto_wallet/util/AccountsPermissionsHelper.java",

]
mises_browser_ui_android_appmenu_internal_sources = [
]
mises_browser_ui_android_toolbar_sources = [
]
mises_java_base_sources = [
  "//mises/android/java/org/chromium/base/MisesReflectionUtil.java",
]
mises_java_base_module_sources = [
  "//mises/android/features/mises/java/org/chromium/chrome/browser/mises/MisesLCDService.java",
  "//mises/android/java/org/chromium/base/MisesAdsUtil.java",
  
]

mises_java_base_module_deps = [
  "//mises/third_party/mises:mises_light_node_java",
  "//mises/third_party/android_deps:com_wireguard_android_java",
  "//mises/third_party/android_deps:google_firebase_firebase_analytics_java",
  "//mises/third_party/android_deps:google_play_services_ads_java",
  "//mises/third_party/android_deps:google_play_services_ads_lite_java",
  "//third_party/android_deps:playcore_java",
  "//third_party/androidx:androidx_core_core_java",
  "//third_party/androidx:androidx_lifecycle_lifecycle_viewmodel_java",
]
